--- a/P009537.opf/meta.yml
+++ b/P009537.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P009537
+id: P009537
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W18640
   title: ཆོས་ཀྱི་བཟང་པོའི་རྣམ་ཐར
-  volume: ''
   author: ''
+  volumes: {}
