--- a/P009537.opf/layers/v001/Pagination.yml
+++ b/P009537.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 39cbded5978d4713aab163817423fdb9
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   d3ff00a72b66415faeb699c3f91e84c8:
