--- a/P009537.opf/meta.yml
+++ b/P009537.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P009537
 initial_creation_type: ocr
+created_at: 28/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W18640
   title: ཆོས་ཀྱི་བཟང་པོའི་རྣམ་ཐར
