--- a/P009537.opf/meta.yml
+++ b/P009537.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P009537
 initial_creation_type: ocr
 created_at: 28/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-19 20:37:00.914581
 source_metadata:
   id: bdr:W18640
   title: ཆོས་ཀྱི་བཟང་པོའི་རྣམ་ཐར
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 10
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
